--- a/styles/style.css
+++ b/styles/style.css
@@ -111,7 +111,6 @@ p {font-size: 16px;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  /*min-height: 80%;*/
 }
 
 
@@ -165,7 +164,8 @@ p {font-size: 16px;
 /* Active Tours */
 
 .active-tour {
-  padding-bottom: 100px;
+  padding-bottom: 50px;
+  padding-top: 50px;
 }
 
 .active-watch-paragraph {
